# shadowops-bot

./: .bot.pid  .gitignore  ACTIVE_SECURITY_GUARDIAN.md  AGENT_INSTRUCTIONS.md  AI_LEARNING_MULTI_PROJECT.md  CHANGELOG.md  CLAUDE.md  DOCS_OVERVIEW.md  FIXES_2025-11-25.md  GITHUB_PUSH_NOTIFICATIONS_SETUP.md  HYBRID_AI_SYSTEM.md  LEARNING_SYSTEM_IMPLEMENTATION_PLAN.md  MULTI_GUILD_SETUP.md  QUICKSTART.md  README.md  UNRESOLVED_ISSUES.md  UPDATE_GUIDE.md  benchmark.py  benchmark_agent_stats.py  benchmark_islice.py  benchmark_seo_stats.py  diagnose-bot.sh  get_bot_invite.py  list_findings.py  logrotate.conf  logrotate.state  main.py  monitor-ollama.sh  package-lock.json  package.json  pyproject.toml  pytest.ini  query_finding.py  requirements-dev.txt  requirements.txt  restart-service.sh  restart.sh  safe_upgrades.yaml  setup.sh  shadowops-bot.service  (+6 more)
.github/: PULL_REQUEST_TEMPLATE.md
config/: DO-NOT-TOUCH.md  config.example.yaml  config.multi-guild.example.yaml  config.recommended.yaml  config.yaml.backup-20251118-181912  safe_upgrades.yaml
deploy/: MONITORING_SETUP.md  ai-agent-framework-watchdog.service  ai-agent-framework-watchdog.timer  cmdshadow-design-watchdog.service  cmdshadow-design-watchdog.timer  disk-hygiene-watchdog.service  disk-hygiene-watchdog.timer  doku-drift-watchdog.service  doku-drift-watchdog.timer  guildscout-watchdog.service  guildscout-watchdog.timer  ki-cost-watchdog.service  ki-cost-watchdog.timer  mayday-ci-runner-watchdog.service  mayday-ci-runner-watchdog.timer  mayday-scheduler-watchdog.service  mayday-scheduler-watchdog.timer  (+29 more)
(+486 files in other folders)
